# home_work12.2

./: README.md  pyproject.toml
tests/: test_arrs.py
