[tool.poetry]
name = "home-work12-2"
version = "0.1.0"
description = ""
authors = ["QIC Bel <tsyplakov-a@list.ru>"]
readme = "README.md"
packages = [{include = "home_work12"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
